--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -65,10 +65,10 @@
     "radix-ui": "^1.4.3",
     "react-day-picker": "^9.9.0",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "@aeme/tailwind-config": "workspace:*"
   },
   "devDependencies": {
-    "@aeme/tailwind-config": "workspace:*",
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/addon-interactions": "^8.6.14",
     "@storybook/addon-links": "^8.6.14",
