--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -32,7 +32,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "build:styles": "tailwindcss -i ./src/index.css -o ./dist/index.css",
+    "build:styles": "tailwindcss -i ./src/index.css -o ./dist/index.css --minify",
     "build:components": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
     "check-types": "tsc --noEmit",
     "dev:styles": "tailwindcss -i ./src/index.css -o ./dist/index.css --watch",
