--- a/apps/unovision-frontend/package.json
+++ b/apps/unovision-frontend/package.json
@@ -29,10 +29,10 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.5",
-    "clsx": "^2.1.1",
-    "@aeme/tailwind-config": "workspace:*"
+    "clsx": "^2.1.1"
   },
   "devDependencies": {
+    "@aeme/tailwind-config": "workspace:*",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
