--- a/apps/unovision-frontend/package.json
+++ b/apps/unovision-frontend/package.json
@@ -21,10 +21,11 @@
     "react-router": "^7.7.1",
     "usehooks-ts": "^3.1.1",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
-    "zod": "^4.0.14",
+    "zod": "^4.0.0",
     "zustand": "^5.0.7",
     "@aeme/ui": "workspace:*",
     "@aeme/supabase-client": "workspace:*",
+    "@aeme/contracts": "workspace:*",
     "@tailwindcss/vite": "^4.1.17",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
