fix: general fixes

--- a/apps/unovision-backend/supabase/config.toml
+++ b/apps/unovision-backend/supabase/config.toml
@@ -78,7 +78,10 @@ schema_paths = [
 enabled = true
 # Specifies an ordered list of seed files to load during db reset.
 # Supports glob patterns relative to supabase directory: "./seeds/*.sql"
-sql_paths = ["./seed.sql"]
+sql_paths = [
+  "./seeds/seed.sql",
+  "./seeds/seed-users.sql"
+]
 
 [db.network_restrictions]
 # Enable management of network restrictions.
