--- a/.github/workflows/validations.yml
+++ b/.github/workflows/validations.yml
@@ -1,4 +1,4 @@
-name: Validations
+name: Check Types
 
 on:
   pull_request:
@@ -12,16 +12,17 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
-          cache: 'pnpm'
-
+      # Detecta versión desde "packageManager" en package.json
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 9
+          run_install: false   # NO instalar aquí todavía
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "18"
+          cache: "pnpm"
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
