--- a/.github/workflows/validations.yml
+++ b/.github/workflows/validations.yml
@@ -40,4 +40,4 @@ jobs:
         run: pnpm install
 
       - name: 🔎 Run 'check-types' (Turborepo)
-        run: pnpm turbo run check-types
+        run: pnpm run check-types
