--- a/turbo.json
+++ b/turbo.json
@@ -21,6 +21,11 @@
         "^build"
       ]
     },
+    "test": {
+      "dependsOn": [
+        "^build"
+      ]
+    },
     "dev": {
       "cache": false,
       "persistent": true
