--- a/apps/unovision-frontend/package.json
+++ b/apps/unovision-frontend/package.json
@@ -8,29 +8,31 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
-    "check-types": "tsc -b --noEmit"
+    "check-types": "tsc -b --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
+    "@aeme/contracts": "workspace:*",
+    "@aeme/supabase-client": "workspace:*",
+    "@aeme/ui": "workspace:*",
     "@hookform/resolvers": "^5.2.1",
+    "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.84.1",
     "@tanstack/react-table": "^8.21.3",
     "@uidotdev/usehooks": "^2.4.1",
     "camelcase-keys": "^9.1.3",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-router": "^7.7.1",
+    "tailwindcss": "^4.1.5",
     "usehooks-ts": "^3.1.1",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
     "zod": "^4.0.0",
-    "zustand": "^5.0.7",
-    "@aeme/ui": "workspace:*",
-    "@aeme/supabase-client": "workspace:*",
-    "@aeme/contracts": "workspace:*",
-    "@tailwindcss/vite": "^4.1.17",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.5",
-    "clsx": "^2.1.1"
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@aeme/tailwind-config": "workspace:*",
@@ -40,6 +42,7 @@
     "@vitejs/plugin-react": "^5.0.4",
     "globals": "^16.4.0",
     "typescript": "~5.9.3",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vitest": "^4.0.15"
   }
 }
