--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -16,7 +16,7 @@
     "jsx": "react-jsx",
     "outDir": "dist",
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "bundler",
     "types": ["vitest/globals", "@vitest/browser/matchers"]
   },
   "include": ["src"],
