--- a/.github/workflows/validations.yml
+++ b/.github/workflows/validations.yml
@@ -30,7 +30,7 @@ jobs:
         run: pnpm install
         
       - name: 🎭 Install Playwright browsers
-        run: pnpm exec playwright install chromium --with-deps
+        run: npx playwright install chromium --with-deps
 
       - name: 🔎 Run type-check
         run: pnpm run check-types
