--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "pre-commit-check": "pnpm check-types",
     "commit": "pnpm pre-commit-check && pnpm exec cz",
     "backend:db-types": "cd packages/supabase-client && node src/generate-types.mjs",
-    "test": "turbo run test"
+    "test": "turbo run test",
+    "skills:check": "node .claude/scripts/check-skills-local.js"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.4",
