--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -10,5 +10,12 @@
     "cssVariables": true,
     "prefix": ""
   },
+  "aliases": {
+    "components": "./src/components",
+    "utils": "./src/lib/utils",
+    "ui": "./src/components",
+    "lib": "./src/lib",
+    "hooks": "./src/hooks"
+  },
   "iconLibrary": "lucide"
 }
