--- a/.github/workflows/skills-maintenance-check.yml
+++ b/.github/workflows/skills-maintenance-check.yml
@@ -32,7 +32,7 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: npm install -g js-yaml
+        run: npm install js-yaml
 
       - name: Check skills maintenance
         id: check-skills
