--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,8 +20,7 @@
     "editor.formatOnSave": true
   },
   "editor.codeActionsOnSave": {
-    "quickfix.biome": "explicit",
-    "source.organizeImports.biome": "explicit"
+    "source.fixAll.biome": "explicit"
   },
   "typescript.preferences.importModuleSpecifier": "non-relative",
   "javascript.preferences.importModuleSpecifier": "non-relative",
